syntax = "proto3";

package contentservice;

service contentservice {
    rpc GetVideoInfo (VideoInfoRequest) returns (VideoInfoReply) {}
}


message VideoInfo {
    int64   id = 1;
    string  title = 2;
}

message VideoInfoRequest {
    string  apiVersion = 1;
    int64   id = 2;
}

message VideoInfoReply {
    string apiVersion = 1;
    VideoInfo videoInfo = 2;
}